
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int buf ;


 int printf (char*,char*) ;
 int recv (int,char*,int,int ) ;
 int send (int,char*,int,int ) ;
 int strlen (char*) ;

char *senddata(int sock,char *data, int resp)
{
 char buf[66000];
 int i;
 if(resp>=2){
   send(sock,data,strlen(data),0);
  if(strlen(data)<512)
   printf("%s\n",data);
  }
 if(resp<=2){
    i=recv(sock,buf,sizeof(buf),0);
  buf[i]=0;
  if(strlen(buf)<512)
   printf("%s",buf);
 }
 return buf;
}
