; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_23170.c_senddata.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_23170.c_senddata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @senddata(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [66000 x i8], align 16
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp sge i32 %9, 2
  br i1 %10, label %11, label %24

11:                                               ; preds = %3
  %12 = load i32, i32* %4, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @strlen(i8* %14)
  %16 = call i32 @send(i32 %12, i8* %13, i32 %15, i32 0)
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @strlen(i8* %17)
  %19 = icmp slt i32 %18, 512
  br i1 %19, label %20, label %23

20:                                               ; preds = %11
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %21)
  br label %23

23:                                               ; preds = %20, %11
  br label %24

24:                                               ; preds = %23, %3
  %25 = load i32, i32* %6, align 4
  %26 = icmp sle i32 %25, 2
  br i1 %26, label %27, label %41

27:                                               ; preds = %24
  %28 = load i32, i32* %4, align 4
  %29 = getelementptr inbounds [66000 x i8], [66000 x i8]* %7, i64 0, i64 0
  %30 = call i32 @recv(i32 %28, i8* %29, i32 66000, i32 0)
  store i32 %30, i32* %8, align 4
  %31 = load i32, i32* %8, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds [66000 x i8], [66000 x i8]* %7, i64 0, i64 %32
  store i8 0, i8* %33, align 1
  %34 = getelementptr inbounds [66000 x i8], [66000 x i8]* %7, i64 0, i64 0
  %35 = call i32 @strlen(i8* %34)
  %36 = icmp slt i32 %35, 512
  br i1 %36, label %37, label %40

37:                                               ; preds = %27
  %38 = getelementptr inbounds [66000 x i8], [66000 x i8]* %7, i64 0, i64 0
  %39 = call i32 @printf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %38)
  br label %40

40:                                               ; preds = %37, %27
  br label %41

41:                                               ; preds = %40, %24
  %42 = getelementptr inbounds [66000 x i8], [66000 x i8]* %7, i64 0, i64 0
  ret i8* %42
}

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i32 @recv(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
